--- a/public/styles.scss
+++ b/public/styles.scss
@@ -2,6 +2,14 @@ body{
     margin: 0;
 }
 
-#editorcontainer{
+#pane{
     display: flex;
+}
+
+#editorcontainer{
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    flex-direction: column;
+    padding: .5rem;
 }
