--- a/public/styles/_editor.scss
+++ b/public/styles/_editor.scss
@@ -1,27 +1,22 @@
-#editors{
-    display: flex;
-}
+.editor{
 
-.editorheader{
-    text-align: center;
-    font-family: monospace;
-    font-size: 16px;
-    width: 10rem;
-    color: #aaaaaa;
-    background-color: #777;
-    border-radius: 8px 8px 0px 0px;
+    .cm-s-lesser-dark.CodeMirror{
+        background: #151515 !important;
+    }
+    
+    .cm-s-lesser-dark .CodeMirror-gutters{
+        background: #151515 !important;
+        // border: none;
+        border-right: 2px solid #202020 !important;
+    }    
+
 }
 
 .challenger{
-    filter: blur(5px);
     user-select: none;
     pointer-events: none;
-}
 
-.editorcontainer{
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    flex-direction: column;
-    padding: .5rem;
+    .cm-s-lesser-dark span{
+        filter: blur(4px) !important;
+    }
 }
