added to modal functionality

--- a/public/styles/_buttons.scss
+++ b/public/styles/_buttons.scss
@@ -28,3 +28,10 @@ button{
         background-color: #8cb3e5;
     }
 }
+
+#collapse{
+    background-color: transparent;
+    color: white;
+    outline: none;
+    border: none;
+}
