--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -29,6 +29,14 @@ body{
     margin-bottom: 32px;
 }
 
+#editorcontainer.collapsed{
+    grid-template-columns: 2fr !important;
+
+    .ide{
+        max-width: 100%;
+    }
+}
+
 #questioncontainer{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
@@ -57,7 +65,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 
     h1{
         font-family: monospace;
@@ -66,6 +74,29 @@ body{
         background-color: #151515; //#202020
         padding: .25rem .5rem;
         user-select: none;
+        margin: .25rem;
+    }
+
+    #scoreboard{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    h2{
+        font-family: monospace;
+        font-size: 32px;
+        // line-height: 0;
+        color: #5f97dc;
+        margin: 0;
+    }
+
+    h3{
+        font-family: monospace;
+        font-size: 12px;
+        line-height: 0;
+        color: #eaeaea;
+        margin: 0;
     }
 
     #btncontainer{
@@ -76,13 +107,16 @@ body{
 
 .header{
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     font-family: monospace;
     font-size: 16px;
     color: #eaeaea;
     background-color: #262729;
     border-bottom: 2px solid #424242;
-    // border-radius: 8px 8px 0px 0px;
+    border-radius: 4px 4px 0px 0px;
     padding: .5rem;
     max-height: 1rem;
 
