--- a/public/styles/_modal.scss
+++ b/public/styles/_modal.scss
@@ -1,5 +1,5 @@
 #modalcontainer{
-    background-color: #262626;
+    background-color: $container-secondary;
 
     width: auto;
     height: auto;
@@ -15,7 +15,7 @@
     box-shadow: 0px 16px 12px -4px rgba(0,0,0,.15), 0px 8px 8px -2px rgba(0,0,0,.06);
 
     .header{
-        background-color: #424242;
+        background-color: $trim;
     }
 
     #contents{
