--- a/public/styles/_navbar.scss
+++ b/public/styles/_navbar.scss
@@ -1,31 +1,33 @@
 #navbar {
     overflow: hidden;
-    background-color: #424242;
     position: fixed;
+
     top: 0;
     left: 0;
     width: 100%;
     height: 2.5rem;
     z-index: 25;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
-    // box-shadow: 0px 4px 8px -4px rgba(0,0,0,.15);
 
+    background-color: $navbar;
+    border-bottom: 1px solid $btnhover;
+    
     a {
         float: left;
         font-family: monospace;
         font-weight: bold;
         font-size: 16px;
         display: block;
-        color: #f2f2f2;
+        color: $text;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
 
         &:hover{
-            color: #d66853ff;
+            color: $btnhover;
         }
     }
 }
