--- a/public/styles/_palette.scss
+++ b/public/styles/_palette.scss
@@ -1,13 +1,38 @@
-$rich-black-fogra-29: #0d1b2aff;
-$oxford-blue: #1b263bff;
-$bdazzled-blue: #415a77ff;
-$shadow-blue: #778da9ff;
-$platinum: #e0e1ddff;
-$tuscan-red: #7d4e57ff;
-$copper-red: #d66853ff;
+//LIGHT PALETTE
+$bg: #FCFCFC;
+$header: #EBEBEB;
+$trim: #EBEBEB;
+$container: white;
+$gutter: #f7f7f7;
+$container-secondary: white;
+$navbar: white;
+$text: #333333;
 
-$light-gray: #ccdbdcff;
-$powder-blue: #9ad1d4ff;
-$middle-blue: #80ced7ff;
-$cg-blue: #007ea7ff;
-$prussian-blue: #003249ff;
+$btn: #0565d3;
+$btnhover: #0077ff;
+
+//// BLUE PALETTE
+$bg: #161b1f;
+$header: #262b2f;
+$trim: #4b657e;
+$container: #08110e;
+$gutter: #151a1e;
+$container-secondary: #262b2f;
+$navbar: #161b1f;
+$text: #cacfd3;
+
+$btn: #5f97dc;
+$btnhover: #8cb3e5;
+
+//GREY PALETTE
+$bg: #303133;
+$header: #262729;
+$trim: #424242;
+$container: #151515;
+$gutter: #202020;
+$container-secondary: #262626;
+$navbar: #303133;
+$text: #eaeaea;
+
+$btn: #7d4e57ff;
+$btnhover: #d66853ff;
