added socket.io rooms

--- a/public/styles/_buttons.scss
+++ b/public/styles/_buttons.scss
@@ -4,6 +4,7 @@ button{
     border-radius: 4px;
     padding: .25em .5em;
     margin: .25em;
+    background-color: $btn;
 
     &:hover{
         cursor: pointer;
