--- a/public/styles/_palette.scss
+++ b/public/styles/_palette.scss
@@ -24,15 +24,15 @@ $text: #cacfd3;
 $btn: #5f97dc;
 $btnhover: #8cb3e5;
 
-//GREY PALETTE
-$bg: #303133;
-$header: #262729;
-$trim: #424242;
-$container: #151515;
-$gutter: #202020;
-$container-secondary: #262626;
-$navbar: #303133;
-$text: #eaeaea;
+// //GREY PALETTE
+// $bg: #303133;
+// $header: #262729;
+// $trim: #424242;
+// $container: #151515;
+// $gutter: #202020;
+// $container-secondary: #262626;
+// $navbar: #303133;
+// $text: #eaeaea;
 
-$btn: #7d4e57ff;
-$btnhover: #d66853ff;
+// $btn: #7d4e57ff;
+// $btnhover: #d66853ff;
