--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1,24 +1,11 @@
 @import 'palette';
-
-html[data-theme="dark"]{
-    $bg: #303133;
-    $header: #262729;
-    $trim: #424242;
-    $container: #151515;
-    $gutter: #202020;
-    $container-secondary: #262626;
-    $navbar: #424242;
-    $text: #eaeaea;
-    
-    $btn: #7d4e57ff;
-    $btnhover: #d66853ff;
-}
-
 @import 'buttons';
 @import 'containers';
 @import 'editor';
 @import 'question';
 @import 'tests';
+@import 'console';
+@import 'options';
 @import 'navbar';
 @import 'modal';
 @import 'scrollbar';
@@ -79,47 +66,6 @@ body{
 
     margin-bottom: -2rem;
     background-color: $header;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-    h1{
-        font-family: monospace;
-        color: $text;
-        border: 1px solid $trim;
-        background-color: $container;
-        padding: .25rem .5rem;
-        user-select: none;
-        margin: .25rem;
-    }
-
-    #scoreboard{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    h2{
-        font-family: monospace;
-        font-size: 32px;
-        color: $btnhover;
-        margin: 0;
-    }
-
-    h3{
-        font-family: monospace;
-        font-size: 12px;
-        line-height: 0;
-        color: $text;
-        margin: 0;
-    }
-
-    #btncontainer{
-        display: flex;
-        justify-content: space-between;
-    }
 }
 
 #preventclick{
