fleshed out testing suite

--- a/public/styles/_buttons.scss
+++ b/public/styles/_buttons.scss
@@ -8,6 +8,13 @@ button{
 
     &:hover{
         cursor: pointer;
+        background-color: $btnhover;
+    }
+
+    &:disabled{
+        cursor: not-allowed;
+        background-color: gray;
+        border: 1px solid gray;
     }
 }
 
