--- a/public/styles/_modal.scss
+++ b/public/styles/_modal.scss
@@ -11,6 +11,8 @@
     top: 50%;
     transform: translate(-50%, -50%);
 
+    padding-bottom: 1rem;
+
     z-index: 100;
     box-shadow: 0px 16px 12px -4px rgba(0,0,0,.15), 0px 8px 8px -2px rgba(0,0,0,.06);
 
