toggle color schemes

--- a/public/styles/_question.scss
+++ b/public/styles/_question.scss
@@ -1,8 +1,8 @@
 #question {
     .cm-s-lesser-dark.CodeMirror{
-        background: $container-secondary !important;
+        background: var(--container-secondary) !important;
     }
     .cm-s-lesser-dark span.cm-comment{
-        color: $text !important;
+        color: var(--text) !important;
     }
 }
