--- a/public/styles/_editor.scss
+++ b/public/styles/_editor.scss
@@ -5,12 +5,12 @@
 .editor{
 
     .cm-s-lesser-dark.CodeMirror{
-        background: $container !important;
+        background: var(--container) !important;
     }
     
     .cm-s-lesser-dark .CodeMirror-gutters{
-        background: $container !important;
-        border-right: 2px solid $gutter !important;
+        background: var(--container) !important;
+        border-right: 2px solid var(--gutter) !important;
     }    
 
 }
