--- a/public/styles/_modal.scss
+++ b/public/styles/_modal.scss
@@ -1,5 +1,5 @@
 #modalcontainer{
-    background-color: $container-secondary;
+    background-color: var(--container-secondary);
 
     width: auto;
     height: auto;
@@ -17,7 +17,7 @@
     box-shadow: 0px 16px 12px -4px rgba(0,0,0,.15), 0px 8px 8px -2px rgba(0,0,0,.06);
 
     .header{
-        background-color: $trim;
+        background-color: var(--trim);
     }
 
     #contents{
