--- a/public/styles/_navbar.scss
+++ b/public/styles/_navbar.scss
@@ -12,8 +12,8 @@
     align-items: center;
     justify-content: space-between;
 
-    background-color: $navbar;
-    border-bottom: 1px solid $btnhover;
+    background-color: var(--navbar);
+    border-bottom: 1px solid var(--btnhover);
     
     a {
         float: left;
@@ -21,13 +21,14 @@
         font-weight: bold;
         font-size: 16px;
         display: block;
-        color: $text;
+        color: var(--text);
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
+        user-select: none;
 
         &:hover{
-            color: $btnhover;
+            color: var(--btnhover);
         }
     }
 }
