--- a/public/styles/_tests.scss
+++ b/public/styles/_tests.scss
@@ -1,10 +1,10 @@
 #test {
     .cm-s-lesser-dark.CodeMirror{
-        background: $container !important;
+        background: var(--container) !important;
     }
 
     .cm-s-lesser-dark .CodeMirror-gutters{
-        background: $container !important;
-        border-right: 2px solid $gutter !important;
+        background: var(--container) !important;
+        border-right: 2px solid var(--gutter) !important;
     }    
 }
