--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -126,7 +126,7 @@ input{
     grid-row: 4;
 
     margin-bottom: -2rem;
-    background-color: $header;
+    background-color: var(--header);
 }
 
 #preventclick{
