modified execute function

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -16,7 +16,7 @@ html{
     --bg: #161b1f;
     --header: #262b2f;
     --trim: #4b657e;
-    --container: #08110e;
+    --container: #080a11;
     --gutter: #151a1e;
     --container-secondary: #262b2f;
     --navbar: #161b1f;
