--- a/public/styles/_containers.scss
+++ b/public/styles/_containers.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
     font-family: monospace;
     font-size: 16px;
