--- a/public/styles/_navbar.scss
+++ b/public/styles/_navbar.scss
@@ -17,8 +17,8 @@
     
     a {
         float: left;
-        font-family: monospace;
-        font-weight: bold;
+        font-family: 'Barlow', sans-serif;
+        font-weight: 500;
         font-size: 16px;
         display: block;
         color: var(--text);
