--- a/public/styles/_options.scss
+++ b/public/styles/_options.scss
@@ -9,7 +9,7 @@
     #countdown{
         font-family: monospace;
         font-size: 24px;
-        color: var(--text);
+        color: var(--text-alt);
         border: 1px solid var(--trim);
         background-color: var(--container);
         padding: .25rem .5rem;
