--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -36,7 +36,7 @@ p{
 }
 
 input{
-    color: var(--text);
+    color: var(--text-alt);
     background-color: var(--container);
 
     width: 16rem;
@@ -107,6 +107,9 @@ hr{
 
     margin-bottom: -2rem;
     background-color: var(--header);
+
+    border-radius: 4px;
+    padding: 1rem;
 }
 
 #preventclick{
