added mocha to iframe for test checks

--- a/public/styles/_tests.scss
+++ b/public/styles/_tests.scss
@@ -8,3 +8,8 @@
         border-right: 2px solid var(--gutter) !important;
     }    
 }
+
+#mocha{
+    // background-color: white;
+    pointer-events: none;
+}
