attempting to check mocha results from frontend

--- a/public/styles/_tests.scss
+++ b/public/styles/_tests.scss
@@ -10,6 +10,14 @@
 }
 
 #mocha{
-    // background-color: white;
-    pointer-events: none;
+    // color: var(--text);
+    // background-color: var(--container);
+    background-color: white;
+    // pointer-events: none;
+
+    // .suite{
+    //     h1{
+    //         color: var(--text);
+    //     }
+    // }
 }
